# ContactFast

./: .gitignore  CONTRIBUTING.md  FORM_EXAMPLES.md  LICENSE.md  README.md  database.py  disposable_domains.conf  email_template.html  main.py  pyproject.toml  requirements.txt  ruff.toml  schemas.py
core/: database.py  schemas.py
routes/: contact.py  info.py
templates/: activation_template.html  analytics.html
utils/: rate_limit.py  validation.py
