[project]
name = "ContactFast"
version = "1.0.0"
description = "FastAPI-powered email submission endpoint for frontend only websites"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.104.1",
    "pg8000>=1.30.0",
    "pydantic[email]==2.5.0",
    "python-dotenv==1.0.0",
    "resend==0.8.0",
    "sqlalchemy>=2.0.35",
    "uvicorn[standard]==0.24.0",
]
